--- a/appveyor.yml
+++ b/appveyor.yml
@@ -10,6 +10,6 @@ build_script:
 # test_script:
 #   - docker run me/myfavoriteapp
 
-# deploy_script:
-#   - docker login -u="$env:DOCKER_USER" -p="$env:DOCKER_PASS"
-#   - docker push me/myfavoriteapp
+deploy_script:
+  - docker login -u="$env:DOCKER_USER" -p="$env:DOCKER_PASS"
+  - docker push peresadaoleg/olegperesada:deploy/app
