--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,5 +1,12 @@
 version: 1.0.{build}
-image: Visual Studio 2017
+image: Ubuntu
+
+environment:
+  DOCKER_USER:
+    secure: 04T1JyfyhfcvC1+4KIJg4A==
+  DOCKER_PASS:
+    secure: T5atRDJZWwSIN1388pnTqw==
+
 
 install:
   - docker version
