--- a/appveyor.yml
+++ b/appveyor.yml
@@ -18,5 +18,5 @@ build_script:
 #   - docker run me/myfavoriteapp
 
 deploy_script:
-  - docker login -u=$env:DOCKER_USER -p=$env:DOCKER_PASS
+  - docker login -u=$DOCKER_USER -p=$DOCKER_PASS
   - docker push peresadaoleg/olegperesada:deploy/app
