--- a/appveyor.yml
+++ b/appveyor.yml
@@ -19,4 +19,4 @@ build_script:
 
 deploy_script:
   - docker login -u=$DOCKER_USER -p=$DOCKER_PASS
-  - docker push peresadaoleg/olegperesada:deploy/app
+  - docker push deploy/app
