--- a/appveyor.yml
+++ b/appveyor.yml
@@ -12,11 +12,11 @@ install:
   - docker version
 
 build_script:
-  - docker build -t deploy/app .
+  - docker build -t deploy/app:1.0.{build} .
 
 # test_script:
 #   - docker run me/myfavoriteapp
 
 deploy_script:
   - docker login -u=$DOCKER_USER -p=$DOCKER_PASS
-  - docker push deploy/app
+  - docker push peresadaoleg/olegperesada:1.0.{build}
