--- a/appveyor.yml
+++ b/appveyor.yml
@@ -19,4 +19,5 @@ build_script:
 
 deploy_script:
   - docker login -u=$DOCKER_USER -p=$DOCKER_PASS
+  - docker tag deploy/app:coreapp peresadaoleg/olegperesada:coreapp
   - docker push peresadaoleg/olegperesada:coreapp
