--- a/appveyor.yml
+++ b/appveyor.yml
@@ -14,11 +14,10 @@ install:
 build_script:
   - docker build -t deploy/app:coreapp .
 
-# test_script:
-#   - docker run me/myfavoriteapp
+test_script:
+  - docker run me/myfavoriteapp
 
 deploy_script:
   - docker login -u=$DOCKER_USER -p=$DOCKER_PASS
   - docker tag deploy/app:coreapp peresadaoleg/olegperesada:coreapp
   - docker push peresadaoleg/olegperesada:coreapp
-  - ssh
