--- a/appveyor.yml
+++ b/appveyor.yml
@@ -18,6 +18,7 @@ build_script:
 #   - docker run me/myfavoriteapp
 
 deploy_script:
+  - choco install docker-compose
   - docker login -u=$DOCKER_USER -p=$DOCKER_PASS
   - docker tag deploy/app:coreapp peresadaoleg/olegperesada:coreapp
   - docker push peresadaoleg/olegperesada:coreapp
