--- a/appveyor.yml
+++ b/appveyor.yml
@@ -10,7 +10,8 @@ environment:
 
 install:
   - docker version
-
+  - cinst docker-compose
+  
 build_script:
   - docker build -t deploy/app:coreapp .
 
@@ -18,7 +19,6 @@ build_script:
 #   - docker run me/myfavoriteapp
 
 deploy_script:
-  - choco install docker-compose
   - docker login -u=$DOCKER_USER -p=$DOCKER_PASS
   - docker tag deploy/app:coreapp peresadaoleg/olegperesada:coreapp
   - docker push peresadaoleg/olegperesada:coreapp
