--- a/appveyor.yml
+++ b/appveyor.yml
@@ -22,5 +22,5 @@ build_script:
 
 deploy_script:
   - docker login -u=$DOCKER_USER -p=$DOCKER_PASS
-  - docker tag deploy/app:coreapp peresadaoleg/olegperesada:coreapp
-  - docker push peresadaoleg/olegperesada:coreapp
+  - docker-compose up --build --no-start
+  - docker-compose up --build --no-start
