--- a/appveyor.yml
+++ b/appveyor.yml
@@ -22,5 +22,4 @@ build_script:
 
 deploy_script:
   - docker login -u=$DOCKER_USER -p=$DOCKER_PASS
-  - docker-compose up --build --no-start
-  - docker-compose up --build --no-start
+  - docker-compose push
