--- a/appveyor.yml
+++ b/appveyor.yml
@@ -15,7 +15,7 @@ install:
   - sudo docker-compose --version
 
 build_script:
-  - docker build -t deploy/app:coreapp .
+  - docker-compose up --build --no-start
 
 # test_script:
 #   - docker run me/myfavoriteapp
